fixtures/valid/example-code.lmk
@example
  # This is example text, not a heading.
  @summary
  This is example text, not a block.
