fixtures/invalid/empty-heading.lmk
# 

@summary
Headings need visible text.
